--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="col-sm-12 nopadding">
                         <div class="f_list boxs">
                             <div class="img img1 boxs">
-                                <img src="img/schneider.png" alt="img1" class="img-responsive">
+                                <img src="../img/schneider.png" alt="img1" class="img-responsive">
                             </div>
                             <div class="img_title boxs">
                                 <h3>myschneider App ( iOS,Android )</h3>
