--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="col-sm-8 width767">
                                 <div class="banner_heading boxs">
                                     <h1>Hey there, I’m Karim elkharraz a Lead UI UX Designer <span>@Hiddenfounders and formerly @Hiddenfounders. </span></h1>
-                                    <a href="javascript:void(0)">More about me…</a>
+                                    <a href= "about.html" >More about me…</a>
                                 </div>
 
                             </div>
