--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="img/favicon/fa_icon.png" type="image/ico" sizes="16x16">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Karim | About</title>
+        <title>About — Karim ELkharraz</title>
         <!-- Bootstrap -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -57,11 +57,11 @@
                                 <div class="banner_heading boxs">
                                     <h1>About me</h1>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                        sed do eiusmod tempor incididunt ut labore et dolore magna 
+                                        sed do eiusmod tempor incididunt ut labore et dolore magna
                                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                         ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                     </p>
-                                    
+
                                     <div class="icon_class">
                                         <a href="javascript:void(0)" class="first_class"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="0 0 21 18">
                                             <path fill="#FFF" fill-rule="evenodd" d="M18.526 2.846A4.51 4.51 0 0 0 20.42.333a8.355 8.355 0 0 1-2.736 1.102A4.194 4.194 0 0 0 14.539 0c-2.38 0-4.307 2.035-4.307 4.544 0 .356.036.703.11 1.034-3.58-.19-6.754-1.996-8.88-4.747a4.724 4.724 0 0 0-.583 2.285c0 1.576.76 2.967 1.917 3.783a4.154 4.154 0 0 1-1.953-.568v.056c0 2.202 1.484 4.04 3.458 4.455a4.01 4.01 0 0 1-1.137.16c-.277 0-.548-.027-.81-.08.548 1.804 2.139 3.12 4.025 3.155-1.476 1.219-3.333 1.944-5.351 1.944-.348 0-.691-.02-1.028-.062A11.747 11.747 0 0 0 6.604 18c7.926 0 12.257-6.924 12.257-12.929 0-.197-.002-.394-.01-.587A9.006 9.006 0 0 0 21 2.13a8.257 8.257 0 0 1-2.474.715z"/>
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                   
+
                 </div>
 
             </div>
