--- a/project-details.html
+++ b/project-details.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
               <link rel="icon" href="img/favicon/fa_icon.png" type="image/ico" sizes="16x16">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Karim | Details</title>
+        <title>Project Details — Karim ELkharraz</title>
 
         <!-- Bootstrap -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
