--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="img/favicon/fa_icon.png" type="image/ico" sizes="16x16">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Karim | Projects</title>
+        <title>Projects — Karim ELkharraz</title>
         <!-- Bootstrap -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-             
+
             </div>
         </section>
         <!-- banner section end -->
