--- a/project-details.html
+++ b/project-details.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-              <link rel="icon" href="img/favicon/fa_icon.png" type="image/ico" sizes="16x16">
+              <link rel="icon" href="img/favicon/favicon.ico" type="image/ico" sizes="16x16">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Project Details — Karim ELkharraz</title>
 
