--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <img src="img/Schneider.png" alt="img1" class="img-responsive">
                             </div>
                             <div class="img_title boxs">
-                                <h3>myschneider App ( iOS,Android )</h3>
+                                <h3>This is a title for Project 1</h3>
                                 <a href="javascript:void(0)">Case Study <i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
