--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="col-sm-12 nopadding">
                         <div class="f_list boxs">
                             <div class="img img1 boxs">
-                                <img src="img/Schneider.png" alt="img1" class="img-responsive">
+                                <img src="img/img1.png" alt="img1" class="img-responsive">
                             </div>
                             <div class="img_title boxs">
                                 <h3>This is a title for Project 1</h3>
