--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="boxs fbox">
                             <div class="col-sm-8 width767">
                                 <div class="banner_heading boxs">
-                                    <h1>Hey there, I’m Karim elkharraz a Lead UI UX Designer <span>@Hiddenfounders and formerly @Hiddenfounders. </span></h1>
+                                    <h1>Hey, I'm Karim, Product Designer <span>@Hiddenfounders </span></h1>
                                     <a href= "about.html" >More about me…</a>
                                 </div>
 
@@ -126,7 +126,7 @@
 
                         <div class="f_list f_list_2">
                             <div class="img img2">
-                                <img src="img/img1.svg" alt="img1" class="img-responsive">
+                                <img src="img/img2.png" alt="img1" class="img-responsive">
                             </div>
                             <div class="img_title">
                                 <h3>This is a title for Project 2</h3>
