--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="boxs fbox">
                             <div class="col-sm-8 width767">
                                 <div class="banner_heading boxs">
-                                    <h1>Hey, I'm Karim, Product Designer <span>@Hiddenfounders </span></h1>
+                                    <h1>Hey, I'm Karim, Product Designer <span>@United Remote </span></h1>
                                     <a href= "about.html" >More about me…</a>
                                 </div>
 
