--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <img src="img/img1.png" alt="img1" class="img-responsive">
                             </div>
                             <div class="img_title boxs">
-                                <h3>This is a title for Project 1</h3>
+                                <h3>mySchneider Electric App (iOS, Android, Ipad, Tablet)</h3>
                                 <a href="javascript:void(0)">Case Study <i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                                 <img src="img/img2.png" alt="img2" class="img-responsive">
                             </div>
                             <div class="img_title">
-                                <h3>This is a title for Project 2</h3>
+                                <h3>Startup Patterns App (iOS, Android)</h3>
                                 <a href="javascript:void(0)">Case Study <i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
