--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             </div>
                             <div class="img_title boxs">
                                 <h3>mySchneider Electric App (iOS, Android, Ipad, Tablet)</h3>
-                                <a href="javascript:void(0)">Case Study <i class="fa fa-chevron-right"></i></a>
+                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
 
@@ -130,7 +130,7 @@
                             </div>
                             <div class="img_title">
                                 <h3>Startup Patterns App (iOS, Android)</h3>
-                                <a href="javascript:void(0)">Case Study <i class="fa fa-chevron-right"></i></a>
+                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
                         <div class="f_list f_list_3 boxs">
@@ -139,7 +139,7 @@
                             </div>
                             <div class="img_title boxs">
                                 <h3>This is a title for Project 3</h3>
-                                <a href="javascript:void(0)">Case Study <i class="fa fa-chevron-right"></i></a>
+                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
                         <div class="f_list f_list_4">
@@ -148,7 +148,7 @@
                             </div>
                             <div class="img_title">
                                 <h3>This is a title for Project 4</h3>
-                                <a href="javascript:void(0)">Case Study <i class="fa fa-chevron-right"></i></a>
+                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
                     </div>
