--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                         </div>
                         <div class="f_list f_list_3 boxs">
                             <div class="img img3 boxs">
-                                <img src="img/img1.svg" alt="img1" class="img-responsive">
+                                <img src="img/img3.png" alt="img3" class="img-responsive">
                             </div>
                             <div class="img_title boxs">
-                                <h3>This is a title for Project 3</h3>
+                                <h3>Sonasid App for intern employees (iOS) </h3>
                                 <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
