--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                         </div>
                         <div class="f_list f_list_4">
                             <div class="img img4">
-                                <img src="img/img1.svg" alt="img1" class="img-responsive">
+                                <img src="img/img4.png" alt="img4" class="img-responsive">
                             </div>
                             <div class="img_title">
-                                <h3>This is a title for Project 4</h3>
+                                <h3>Home Favor web App</h3>
                                 <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
