add about desciption

--- a/about.html
+++ b/about.html
@@ -55,11 +55,9 @@
                         <div class="boxs fbox home_fbox">
                             <div class="col-sm-7 col-xs-12 width767">
                                 <div class="banner_heading boxs">
-                                    <h1>About me</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                        ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    <h1>Nice to have you here!</h1>
+                                    <p>I'm Karim Elkharraz,a product designer living in Rabat!
+                                      As a product designer, I work close with founders, product managers and engineers to help design and ship web, mobile and desktop applications that solve problems and offer users an enjoyable experience.
                                     </p>
 
                                     <div class="icon_class">
