--- a/about.html
+++ b/about.html
@@ -56,8 +56,8 @@
                             <div class="col-sm-7 col-xs-12 width767">
                                 <div class="banner_heading boxs">
                                     <h1>Nice to have you here!</h1>
-                                    <p>I'm Karim Elkharraz,a product designer living in Rabat!
-                                      As a product designer, I work close with founders, product managers and engineers to help design and ship web, mobile and desktop applications that solve problems and offer users an enjoyable experience.
+                                    <p>I'm Karim Elkharraz,a Product Designer living in Rabat!</br>
+                                      As a Product Designer,I work close with founders, product managers and engineers to help design and ship web, mobile and desktop applications that solve problems and offer users an enjoyable experience.
                                     </p>
 
                                     <div class="icon_class">
