--- a/about.html
+++ b/about.html
@@ -113,8 +113,8 @@
                     <div class="boxs ex_top esper_box">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>Lead UI UX Designer</h3>
-                                <p>Hiddenfounders.com</p>
+                                <h3>Product Designer</h3>
+                                <p>UnitedRemote.com (Ex: HiddenFounders.com)</p>
                             </div>
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
@@ -127,13 +127,13 @@
                     <div class="boxs esper_box">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>UI UX Designer</h3>
+                                <h3>Lead UI UX Designer</h3>
                                 <p>Hiddenfounders.com</p>
                             </div>
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
                             <div class="exper_right boxs">
-                                <p>2016 - Today</p>
+                                <p>2016 - 2018</p>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
                                 <h3>Intern (Web Designer)</h3>
-                                <p>Hiddenfounders.com</p>
+                                <p>inovia.ma</p>
                             </div>
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
