--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="boxs fbox">
                             <div class="col-sm-8 width767">
                                 <div class="banner_heading boxs">
-                                    <h1>Hey, I'm Karim, Product Designer <span>@United Remote </span></h1>
+                                    <h1>Hey, I'm Karim, Product Designer <span>@United Remote</span></h1>
                                     <a href= "about.html" >More about me…</a>
                                 </div>
 
@@ -116,7 +116,7 @@
                     <div class="col-sm-12 nopadding">
                         <div class="f_list boxs">
                             <div class="img img1 boxs">
-                                <img src="img/img1.png" alt="img1" class="img-responsive">
+                                <a href="#"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
                             </div>
                             <div class="img_title boxs">
                                 <h3>mySchneider Electric App (iOS, Android, Ipad, Tablet)</h3>
@@ -126,7 +126,7 @@
 
                         <div class="f_list f_list_2">
                             <div class="img img2">
-                                <img src="img/img2.png" alt="img2" class="img-responsive">
+                                <a href="#"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
                             </div>
                             <div class="img_title">
                                 <h3>Startup Patterns App (iOS, Android)</h3>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="f_list f_list_3 boxs">
                             <div class="img img3 boxs">
-                                <img src="img/img3.png" alt="img3" class="img-responsive">
+                                <a href="#"><img src="img/img3.png" alt="img3" class="img-responsive"></a>
                             </div>
                             <div class="img_title boxs">
                                 <h3>Sonasid App for intern employees (iOS) </h3>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="f_list f_list_4">
                             <div class="img img4">
-                                <img src="img/img4.png" alt="img4" class="img-responsive">
+                                <a href="#"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
                             </div>
                             <div class="img_title">
                                 <h3>Home Favor web App</h3>
