--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="projects.html">Work</a></li>
+                                <li><a href="projects.html">resume 🤙</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
