--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="projects.html">Work</a></li>
-                                <li><a href="projects.html">resume 🤙</a></li>
+                                <li><a href="#">resume 🤙</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
@@ -174,9 +174,9 @@
                         <div class="col-sm-12 nopadding">
                             <div class="text-center">
                                 <p>YOU CAN FIND ME ON </p>
-                                <a href="javascript:void(0)">Twitter</a>
-                                <a href="javascript:void(0)">Dribbble</a>
-                                <a href="javascript:void(0)">Instagram</a>
+                                <a href="https://twitter.com/karimmove">Twitter</a>
+                                <a href="https://dribbble.com/karimmove">Dribbble</a>
+                                <a href="https://instagram.com/karim.elkharraz">Instagram</a>
                             </div>
                         </div>
                         <a href="javascript:void(0)" class="top"><img src="img/top.svg" alt="top" class="img-responsive img_show"><img src="img/top_hover.svg" alt="top_hover" class="img-responsive img_hide">Back to top</a>
