--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                             </div>
                             <div class="col-sm-5 col-xs-12">
                                 <div class="banner_img home_img">
-                                    <img src="img/banner_img.png" alt="banner_img" class="img-responsive">
+                                    <img src="img/banner_img.svg" alt="banner_img" class="img-responsive">
                                 </div>
                             </div>
                         </div>
