--- a/project-details.html
+++ b/project-details.html
@@ -38,6 +38,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="projects.html">Work</a></li>
+                                <li><a href="#">resume 🤙</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
