--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="projects.html" class="active">Work</a></li>
+                                <li><a href="#">resume 🤙</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
