--- a/projects.html
+++ b/projects.html
@@ -79,43 +79,55 @@
             <div class="container">
                 <div class="col-sm-6">
                     <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project"></div></a>
-                        <h2>This is a title for Project 1</h2>
+                        <a href="project-details.html"><div class="project">
+                          <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
+                        </div></a>
+                        <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project"></div></a>
-                        <h2>This is a title for Project 2</h2>
+                        <a href="project-details.html"><div class="project">
+                          <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
+                        </div></a>
+                        <!-- <h2>Startup Patterns App (iOS, Android)</h2> -->
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project"></div></a>
-                        <h2>This is a title for Project 3</h2>
+                        <a href="project-details.html"><div class="project">
+                          <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
+                        </div></a>
+                        <!-- <h2>Sonasid App for intern employees (iOS)</h2> -->
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project"></div></a>
-                        <h2>This is a title for Project 4</h2>
+                        <a href="project-details.html"><div class="project">
+                          <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
+                        </div></a>
+                        <!-- <h2>Home Favor web App</h2> -->
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project"></div></a>
-                        <h2>This is a title for Project 5</h2>
+                        <a href="project-details.html"><div class="project">
+                          <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
+                        </div></a>
+                        <!-- <h2>This is a title for Project 5</h2> -->
                     </div>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project"></div></a>
-                        <h2>This is a title for Project 6</h2>
+                        <a href="project-details.html"><div class="project">
+                          <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
+                        </div></a>
+                        <!-- <h2>This is a title for Project 6</h2> -->
                     </div>
                 </div>
 
