New update layout

--- a/index.html
+++ b/index.html
@@ -113,47 +113,55 @@
                 <div class="feature_inner boxs">
                     <div class="feature_heading boxs">
                         <h2>Featured Projects</h2>
-                    </div>
-                    <div class="col-sm-12 nopadding">
-                        <div class="f_list boxs">
-                            <div class="img img1 boxs">
-                                <a href="#"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
+                        <div class="card-columns">
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
+                                  <h3>mySchneider Electric</h3>
+                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
-                            <div class="img_title boxs">
-                                 <h3>mySchneider Electric App (iOS, Android, Ipad, Tablet)</h3>
-                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
+                          </div>
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
+                                  <h3>mySchneider Electric</h3>
+                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
-                        </div>
+                          </div>
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
+                                  <h3>mySchneider Electric</h3>
+                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
+                                  <h3>mySchneider Electric</h3>
+                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                            </div>
+                          </div>
 
-                        <div class="f_list f_list_2">
-                            <div class="img img2">
-                                <a href="#"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
-                            </div>
-                            <div class="img_title">
-                                <h3>Startup Patterns App (iOS, Android)</h3>
-                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
-                            </div>
-                        </div>
-                        <div class="f_list f_list_3 boxs">
-                            <div class="img img3 boxs">
-                                <a href="#"><img src="img/img3.png" alt="img3" class="img-responsive"></a>
-                            </div>
-                            <div class="img_title boxs">
-                                <h3>Sonasid App for intern employees (iOS) </h3>
-                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
-                            </div>
-                        </div>
-                        <div class="f_list f_list_4">
-                            <div class="img img4">
-                                <a href="#"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
-                            </div>
-                            <div class="img_title">
-                                <h3>Home Favor web App</h3>
-                                <a href="javascript:void(0)">Case Study (Soon)<i class="fa fa-chevron-right"></i></a>
-                            </div>
-                        </div>
+                      
+
+                   </div>
                     </div>
+
                 </div>
+
             </div>
         </section>
         <!-- feature section end -->
