--- a/projects.html
+++ b/projects.html
@@ -75,65 +75,81 @@
         <!-- banner section end -->
 
         <!-- feature section start -->
+        <!-- hna bdina -->
         <section class="feature boxs">
             <div class="container">
-                <div class="col-sm-6">
-                    <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project">
-                          <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
-                        </div></a>
-                        <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project">
-                          <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
-                        </div></a>
-                        <!-- <h2>Startup Patterns App (iOS, Android)</h2> -->
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project">
-                          <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
-                        </div></a>
-                        <!-- <h2>Sonasid App for intern employees (iOS)</h2> -->
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project">
-                          <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
-                        </div></a>
-                        <!-- <h2>Home Favor web App</h2> -->
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project">
-                          <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
-                        </div></a>
-                        <!-- <h2>This is a title for Project 5</h2> -->
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="projects_wraper">
-                        <a href="project-details.html"><div class="project">
-                          <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
-                        </div></a>
-                        <!-- <h2>This is a title for Project 6</h2> -->
-                    </div>
-                </div>
-
-
+        <div class="card-columns">
+          <div class="card">
+            <div class="projects_wraper">
+                <a href="project-details.html"><div class="project hovereffect">
+                  <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
+                  <h3>mySchneider Electric</h3>
+                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                </div></a>
+                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
             </div>
-        </section>
+          </div>
+          <div class="card">
+            <div class="projects_wraper">
+                <a href="project-details.html"><div class="project hovereffect">
+                  <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
+                  <h3>mySchneider Electric</h3>
+                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                </div></a>
+                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+            </div>
+          </div>
+          <div class="card">
+            <div class="projects_wraper">
+                <a href="project-details.html"><div class="project hovereffect">
+                  <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
+                  <h3>mySchneider Electric</h3>
+                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                </div></a>
+                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+            </div>
+          </div>
+          <div class="card">
+            <div class="projects_wraper">
+                <a href="project-details.html"><div class="project hovereffect">
+                  <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
+                  <h3>mySchneider Electric</h3>
+                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                </div></a>
+                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="projects_wraper">
+                <a href="project-details.html"><div class="project hovereffect">
+                  <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
+                  <h3>mySchneider Electric</h3>
+                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                </div></a>
+                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+            </div>
+          </div>
+          <div class="card">
+            <div class="projects_wraper">
+                <a href="project-details.html"><div class="project hovereffect">
+                  <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
+                  <h3>mySchneider Electric</h3>
+                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                </div></a>
+                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+            </div>
+          </div>
+          
+   </div>
+       </div>
+       </section>
+
+    <!-- hna salina -->
+
+
+
+
         <!-- feature section end -->
 
         <!-- footer section start -->
