update home page

--- a/index.html
+++ b/index.html
@@ -112,42 +112,58 @@
             <div class="container">
                 <div class="feature_inner boxs">
                     <div class="feature_heading boxs">
-                        <h2>Featured Projects</h2>
+                        <!-- <h2>Featured Projects</h2>-->
                         <div class="card-columns">
+
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
-                                  <h3>mySchneider Electric</h3>
-                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                  <h1>Featured Projects</h1>
+                                  <h2>Selected work great projects</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
                           </div>
+
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
-                                  <h3>mySchneider Electric</h3>
-                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                  <a href="https://placeholder.com"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
+                                  <h3>Startup Patterns</h3>
+                                  <h2>Bite-sized startup lessons for busy founders.</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
                           </div>
+
+
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
-                                  <h3>mySchneider Electric</h3>
-                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                  <a href="https://placeholder.com"><img src="img/img2.png" alt="img1" class="img-responsive"></a>
+                                  <h3>Home Favor</h3>
+                                  <h2>Find quality home service professionals using local real estate agents recommendations</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
                           </div>
+
+
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
+                                  <a href="https://placeholder.com"><img src="img/img3.png" alt="img1" class="img-responsive"></a>
+                                  <h3>Home Favor</h3>
+                                  <h2>Find quality home service professionals using local real estate agents recommendations</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                            </div>
+                          </div>
+
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="https://placeholder.com"><img src="img/img4.png" alt="img1" class="img-responsive"></a>
                                   <h3>mySchneider Electric</h3>
                                   <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
                                 </div></a>
@@ -155,7 +171,7 @@
                             </div>
                           </div>
 
-                      
+
 
                    </div>
                     </div>
