--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
                     <div class="boxs ex_top ex_top_paddi">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>ESIG</h3>
+                                <h3>NTIC Hay riad</h3>
                                 <p>Digital Communication and Development Multimedia,<span> Rabat / Morocco</span></p>
                             </div>
                         </div>
