--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="https://placeholder.com"><img src="img/img4.png" alt="img1" class="img-responsive"></a>
-                                  <h3>mySchneider Electric</h3>
-                                  <h2>customer. View the catalog online, personalize your service and talk to our experts directly. Now, support and expertise</h2>
+                                  <h3>SD MAP est un outil digital SONASID</h3>
+                                  <h2>Elle permet à ses collaborateurs un accès facile aux données partagées et fluidifie les échanges entre les collaborateurs.</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
