--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="projects.html">Work</a></li>
-                                <li><a href="#">resume 🤙</a></li>
+                                <li><a href="#">🎖️ resume</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
@@ -117,10 +117,10 @@
 
                           <div class="card">
                             <div class="projects_wraper">
-                                <a href="project-details.html"><div class="project hovereffect">
+                                <div class="project hovereffect">
                                   <h1>Featured Projects</h1>
                                   <h2>Selected work great projects</h2>
-                                </div></a>
+                                </div>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
                           </div>
