--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="projects.html" class="active">Work</a></li>
-                                <li><a href="#">resume 🤙</a></li>
+                                <li><a href="#">🎖️ resume‍</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
@@ -140,7 +140,7 @@
                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
             </div>
           </div>
-          
+
    </div>
        </div>
        </section>
