--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="https://placeholder.com"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
-                                  <h3>Startup Patterns</h3>
-                                  <h2>Bite-sized startup lessons for busy founders.</h2>
+                                  <h3>mySchneider Electric app </h3>
+                                  <h2>tailored services, 24/7 access to our catalog, expert support and information</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
@@ -141,8 +141,8 @@
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="https://placeholder.com"><img src="img/img2.png" alt="img1" class="img-responsive"></a>
-                                  <h3>Home Favor</h3>
-                                  <h2>Find quality home service professionals using local real estate agents recommendations</h2>
+                                  <h3>Startup Patterns</h3>
+                                  <h2>Bite-sized startup lessons for busy founders.</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
