--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Karim — Designer, Work & Profile</title>
 
         <!-- Fonts -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600|Roboto:400,500" rel="stylesheet">
 
         <!-- Bootstrap -->
@@ -51,6 +52,18 @@
           drift.SNIPPET_VERSION = '0.3.1';
           drift.load('2dkh48anvr4z');
           </script>
+
+          <style>
+            #section-1 {
+              animation-duration: 2s;
+
+            }
+
+            #section-2 {
+              animation-duration: 2s;
+            }
+
+          </style>
         <!-- End of Async Drift Code -->
     </head>
     <body>
@@ -119,7 +132,7 @@
                             <div class="projects_wraper">
                                 <div class="project hovereffect">
                                   <h1>Featured Projects</h1>
-                                  <h2>Selected work great projects</h2>
+                                  <h2>Get to know my recent work</h2>
                                 </div>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
@@ -163,7 +176,7 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/img7.png" alt="img1" class="img-responsive"></a>
+                                  <a href="https://placeholder.com"><img src="img/img6.png" alt="img1" class="img-responsive"></a>
                                   <h3>Hundred and one percent</h3>
                                   <h2>An impact fund crowdsourced via monthly paymetns thats makes investments based on which posts subscribers share on social media</h2>
                                 </div></a>
