--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="about.html">About</a></li>
+                                  <!-- <li><a href="about.html">About</a></li> -->
                                 <li><a href="projects.html">Work</a></li>
                                 <li><a href="#">🎖️ resume</a></li>
                             </ul>
